--- a/inst/tutorials/week07/week07.Rmd
+++ b/inst/tutorials/week07/week07.Rmd
@@ -182,5 +182,5 @@ learnrhash::encoder_logic()
 ```
 
 ```{r encode, echo=FALSE}
-learnrhash::encoder_ui(default_ui(url = "https://someurl.com"))
+learnrhash::encoder_ui(default_ui(url = "https://ilias.uni-mannheim.de/ilias.php?baseClass=ilObjSurveyGUI&ref_id=1114214&cmd=infoScreen"))
 ```
